# alpha-clinical-agents

./: .gitignore  .pre-commit-config.yaml  Alpha_Clinical_Agents_Demo.ipynb  Dockerfile  EXPERT_ASSESSMENT.md  LICENSE  README.md  demo_10agents.py  demo_12agents.py  demo_3agents.py  demo_orchestrator.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_all_tests.py  test_load.py  test_scenarios.py  test_simulator_1000.py
.github/workflows/: ci.yml
agents/: __init__.py  compliance_checker.py  conflict_resolver.py  cross_reference_validator.py  fact_checker.py  figure_processor.py  final_compiler.py  hallucination_detector.py  human_coordinator.py  meta_validator.py  protocol_analyzer.py  risk_predictor.py  section_writer.py  statistical_validator.py
agents/figure_processor/: __init__.py  extractors.py  integration.py  models.py  processor.py
api/: main.py  requirements.txt
benchmarks/: performance_benchmark.py  run_benchmarks.py
business/: README.md
compliance/: README.md
core/: __init__.py  base_agent.py  database.py  llm_client.py  logging_config.py  message_protocol.py  orchestrator.py  rag_engine.py
data/sample_protocols/: __init__.py
docs/: CICD_SETUP.md  README.md  gaps.md
docs/adr/: 001-why-12-agents.md  002-message-bus-vs-direct-calls.md  003-nli-vs-embeddings.md
docs/deployment/: CASE_STUDY.md
test_reports/: load_tests_20260327_132144.json  master_report_20260327_132144.json  scenarios_20260327_132144.json  test_report_20260327_132144.html  unit_tests_20260327_132144.json
tests/: README.md  README_TESTS.md  conftest.py  test_api.py  test_chaos.py  test_compliance_checker.py  test_conflict_resolver.py  test_cross_reference_validator.py  test_fact_checker.py  test_figure_processor.py  test_final_compiler.py  test_human_coordinator.py  test_integration.py  test_protocol_analyzer.py  test_risk_predictor.py  test_section_writer.py  test_statistical_validator.py
