[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-clinical-agents"
version = "1.0.0"
description = "12-Agent Clinical Document Intelligence System with FDA 21 CFR Part 11 compliance"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Rigjita BM", email = "rigjita@gmail.com"}
]
keywords = ["clinical-trials", "csr", "fda", "multi-agent", "llm", "pharma"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
    "spacy>=3.7.0",
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "sentence-transformers>=2.2.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "tenacity>=8.2.0",
    "httpx>=0.25.0",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
]

[project.urls]
Homepage = "https://github.com/rigjita-bm/alpha-clinical-agents"
Repository = "https://github.com/rigjita-bm/alpha-clinical-agents"
Documentation = "https://github.com/rigjita-bm/alpha-clinical-agents/blob/main/README.md"
Issues = "https://github.com/rigjita-bm/alpha-clinical-agents/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "core*", "api*", "benchmarks*", "compliance*", "business*"]
exclude = ["tests*", "docs*", "workflows*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=agents --cov=core --cov-report=term-missing"

[tool.coverage.run]
source = ["agents", "core", "api"]
omit = ["*/tests/*", "*/test_*"]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B601"]
